# koishi

./: .gitignore  .mdl_style.rb  CHANGELOG.md  Cargo.toml  README.md  deny.toml  devenv.nix  flake.nix
.github/workflows/: ci.yml  release.yml
src/: main.rs
src/auto_transforms/: mod.rs
src/cli/: mod.rs
src/cli/commands/: config.rs  delete.rs  edit.rs  get.rs  git.rs  init.rs  list.rs  mod.rs  move.rs  otp.rs  peek.rs  set.rs  sops.rs  update_keys.rs
src/cli/commands/interactive/: mod.rs
src/cli/commands/interactive/auto_transforms/: mod.rs  otpauth_url.rs
src/secret_store/: mod.rs  record.rs
src/utils/: clipboard.rs  file.rs  git.rs  mod.rs  qr.rs  skim.rs  sops.rs  test.rs
tests/: cli_basic.rs  cli_get.rs
