[package]
name = "koishi-pw"
version = "0.2.1"
license = "MIT"
edition = "2024"
homepage = "https://github.com/DanNixon/koishi"
repository = "https://github.com/DanNixon/koishi"
readme = "README.md"
description = "Password manager build around SOPS"

[[bin]]
name = "koishi"
path = "./src/main.rs"

[dependencies]
clap = { version = "4.5.53", features = ["cargo", "derive", "env", "string"] }
clap_complete = { version = "4.5.64", features = ["unstable-dynamic"] }
gix = { version = "0.77.0", default-features = false }
image = { version = "0.25.9", default-features = false, features = ["png"] }
inquire = { version = "0.9.1", default-features = false, features = ["crossterm"] }
miette = { version = "7.6.0", features = ["fancy"] }
qrcode = "0.14.1"
saphyr = "0.0.6"
serde_json = "1.0.148"
shellexpand = { version = "3.1.1", features = ["path"] }
skim = "0.20.5"
strum = "0.27.2"
strum_macros = "0.27.2"
totp-rs = { version = "5.7.0", features = ["zeroize", "otpauth"] }
walkdir = "2.5.0"
wl-clipboard-rs = "0.9.3"
zeroize = "1.8.2"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3.24.0"

[lints.rust]
# https://doc.rust-lang.org/rustc/lints/listing/allowed-by-default.html
unsafe_code = "deny"
unused_results = "warn"

[lints.clippy]
# https://rust-lang.github.io/rust-clippy/stable/index.html
panic = "deny"
